tests/baselines/reference/parserOverloadOnConstants1.errors.txt
==== tests/cases/compiler/parserOverloadOnConstants1.ts (4 errors) ====
    interface Document {
        createElement(tagName: string): HTMLElement;
                                        ~~~~~~~~~~~
!!! parserOverloadOnConstants1.ts(2,37): error TS2095: Cannot find name 'HTMLElement'.
        createElement(tagName: 'canvas'): HTMLCanvasElement;
                                          ~~~~~~~~~~~~~~~~~
!!! parserOverloadOnConstants1.ts(3,39): error TS2095: Cannot find name 'HTMLCanvasElement'.
        createElement(tagName: 'div'): HTMLDivElement;
                                       ~~~~~~~~~~~~~~
!!! parserOverloadOnConstants1.ts(4,36): error TS2095: Cannot find name 'HTMLDivElement'.
        createElement(tagName: 'span'): HTMLSpanElement;
                                        ~~~~~~~~~~~~~~~
!!! parserOverloadOnConstants1.ts(5,37): error TS2095: Cannot find name 'HTMLSpanElement'.
    }